@@ -1,3 +1,8 @@
+2019-10-15 Wiley E. Hill <wileyhill@gmail.com>
+
+    * src/functions/geda_container.c: And half_height in geda_container_
+      focus_sort_left_right.
+
 2019-10-14 Wiley E. Hill <wileyhill@gmail.com>
 
     * src/functions/geda_container.c: Convert comments to internal Doxygen
